--- a/package.json
+++ b/package.json
@@ -10,13 +10,30 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "antd": "^4.21.0",
+    "axios": "^0.27.2",
+    "next": "^12.1.6",
+    "next-images": "^1.8.4",
+    "next-redux-saga": "^4.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^5.0.0",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
+    "dev":  "next dev --port=4000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
